[package]
name = "humus-terra"
version = "0.0.2"
edition = "2021"
license = "MIT"
keywords = ["web", "server"]
description = "An intuitive and robust web server framework, made with rust, based on hyper"
authors = ["Yeong-won Seo <syw0802@proton.me>"]

exclude = [
    ".gitignore",
    ".github"
]

[dependencies]
chrono = "0"
headers = "0"
http-body-util = "0"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0", features = ["full"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0"
lazy_static = "1.5.0"