[package]
name = "humus-terra"
version = "0.0.8"
edition = "2021"
license = "MIT"
keywords = ["web", "server"]
description = "An intuitive and robust web server framework, made with rust, based on hyper"
authors = ["Yeong-won Seo <syw0802@proton.me>"]
repository = "https://github.com/sharp0802/humus-terra"

exclude = [
    ".gitignore",
    ".github"
]

[dependencies]
aes-gcm = "0"
async-trait = "0"
base64 = "0"
cookie = "0"
chrono = "0"
headers = "0"
http-body-util = "0"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0", features = ["full"] }
lazy_static = "1.5.0"
rand = "0.9.0-alpha.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = "0"
tokio = { version = "1", features = ["full"] }